Added mouse events to share service buttons.

--- a/extension/popup/style.css
+++ b/extension/popup/style.css
@@ -25,9 +25,8 @@ img
 }
 td.service-button
 {
-  background-color: white;
   border: 1px solid;
-  border-color: #33b5e5;
+  border-color: #ffffff;
   padding: 5px;
   text-align: center;
   width: 80px;
