--- a/extension/popup/style.css
+++ b/extension/popup/style.css
@@ -44,3 +44,18 @@ img.top-button
   float: right;
   padding: 2px
 }
+div#message
+{
+  position: fixed;
+  top: 50px;
+  left: 7%;
+  width: 80%;
+  padding: 10px;
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  background-color: rgba(0,0,0,0.5);
+  border: 1px solid;
+  border-color: rgba(0,0,0,0.5);
+  border-radius: 15px;
+}
